--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,13 @@ h1 {
   color: #DBEDF3;
   font-family: "Arvo", cursive;
   text-shadow: 3px 0 #DA0463;
+}
 
+p {
+  font-size: 1rem;
+  color: #DBEDF3;
+  font-family: "Arvo", cursive;
+  text-shadow: 1px 0 #fff7fb;
 }
 
 footer {
@@ -16,7 +22,7 @@ footer {
   font-family: sans-serif;
 }
 
-.set {
+.drums {
   margin: 10% auto;
 }
 
@@ -78,4 +84,16 @@ footer {
 
 .l {
   background-image: url("./images/kick.png");
+}
+
+.tempo {
+  font-size: 2rem;
+  color: #DBEDF3;
+  font-family: "Arvo", cursive;
+  text-shadow: 3px 0 #DA0463;
+  background-color: #404B69;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 50px;
+  margin-top: 10px;
 }
